# zoomfolder

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: build.yml
assets/: icon.rc
cmake/: Info.plist.in
docs/: index.html  site.webmanifest  style.css
scripts/: package-sdk.sh
src/: font_cache.c  font_cache.h  input.c  input.h  main.c  renderer.c  renderer.h  scanner.h  scanner_posix.c  scanner_win32.c  tree.c  tree.h
tests/: test_scanner.c  test_tree.c
